<resources>
    <string name="app_name">Gemeente Breda</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_report">Meldingen</string>
    <string name="title_activity_filter">Filteren</string>

    <string name="report_activity_title_map">Kaart</string>
    <string name="report_activity_title_list">Overzicht</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_permission_alert">App heeft toestemming nodig</string>
    <string name="body_permission_alert">
        Deze app heeft uw toestemming nodig om uw huidige locatie te kunnen lezen.
        Uw locatie wordt gebruikt voor het weergeven van meldingen in uw buurt.</string>
    <string name="button_ok">OK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Instellingen</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_display_name">Naam</string>
    <string name="pref_default_display_name">Onbekend</string>

    <string name="pref_title_email">Email</string>
    <string name="pref_default_email">Onbekend</string>

    <string name="pref_title_phone">Mobiele Nummer</string>
    <string name="pref_default_phone">Onbekend</string>

    <string name="pref_title_theme">Thema</string>
    <string name="pref_default_theme">Donker</string>
    <string-array name="pref_entries_theme">
        <item>Donker</item>
        <item>Licht</item>
    </string-array>
    <string-array name="pref_values_theme">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="pref_title_reset">Standaardinstellingen</string>
    <string name="pref_value_reset">Herstel de standaardinstellingen van de app</string>
    <string name="pref_title_info">Over de app</string>
    <string name="pref_value_info">Versie</string>
    <string name="pref_title_radius">Radius</string>
    <string name="pref_value_radius">Selecteer de radius om meldingen op te filteren</string>

    <string name="report_searchview_hint">Zoeken…</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_message">Welkom bij \'Gemeente Breda\'. \n\n De app voor al uw problemen waar de gemeente iets van af moet weten!</string>
    <string name="login_message">Wij raden u aan om hier uw naam, emailadres en eventueel uw mobiele nummer in te vullen zodat de gemeente contact met u kan opnemen.</string>
    <string name="login_submessage">Deze kunnen later nog gewijzigd worden</string>

    <string name="login_hint_name">Naam</string>
    <string name="login_hint_email">Emailadres</string>
    <string name="login_hint_phone">Mobiele nummer</string>

    <string name="login_btn_register">Registreren</string>
    <string name="login_error_name">Voer uw volledige naam in</string>
    <string name="login_error_email">Voer een geldig emailadres in</string>
    <string name="login_error_phone">Voer een geldig nummer in</string>

    <string name="title_activity_new_report">Nieuwe Melding</string>

    <string name="new_report_title_media">Media Toevoegen</string>
    <string name="media_photo">Foto maken</string>
    <string name="media_video">Video maken</string>
    <string name="media_select">Media selecteren</string>
    <string name="media_delete">Media verwijderen</string>

    <string name="new_report_title_location">Locatie Toevoegen</string>
    <string name="location_current">Huidige locatie</string>
    <string name="location_meta">Locatie van foto</string>
    <string name="location_chosen">Gekozen locatie</string>
    <string name="location_choose">Locatie kiezen</string>
    <string name="location_delete">Locatie verwijderen</string>
    <string name="location_unavailable">Niet gevonden</string>
    <string name="location_error">Niet mogelijk</string>
    <string name="location_notselected">Nog niet gekozen</string>
    <string name="location_empty">Nog geen locatie gekozen</string>

    <string name="new_report_title_category">Categorie Toevoegen</string>

    <string name="new_report_title_description">Omschrijving Toevoegen</string>
    <string name="description_hint">Plaats hier uw omschrijving (optioneel)</string>
    <string name="description_btn_submit">Opslaan</string>
    <string name="description_btn_skip">Overslaan</string>

    <string name="new_report_enable_swiping">U kunt nu terug om de onderdelen aan te passen</string>

    <string name="new_report_title_summary">Concept</string>
    <string name="summary_description_title">Omschrijving</string>
    <string name="summary_author_title">Geplaatst door</string>
    <string name="summary_edit">U kunt de onderdelen wijzigen door terug te gaan naar de vorige schermen.</string>
    <string name="summary_author_info">Uw e-mailadres en mobiele nummer zijn alleen zichtbaar voor de gemeente om eventueel contact met u op te nemen.</string>
    <string name="summary_btn_submit">Melding plaatsen</string>

    <string name="summary_missing_category">Geen categorie</string>
    <string name="summary_missing_location">Geen locatie</string>
    <string name="summary_missing_user">Geen gebruiker</string>
    <string name="summary_missing_description">Geen beschrijving</string>

    <string name="confirmation_succes_message">Melding is geplaatst</string>
    <string name="confirmation_error_message">Er is een fout opgetreden</string>
    <string name="confirmation_btn_home">Naar Hoofdscherm</string>
    <string name="confirmation_btn_report">Melding bekijken</string>

    <string name="detailed_comments_title">Opmerkingen</string>


    <string name="filter_order_title">Volgorde</string>
    <string name="filter_type_title">Type melding</string>


    <string name="detailed_upvotes">%1$d upvotes</string>


    <string-array name="report_filter_array">
        <item>Geen filter</item>
        <item>Meeste upvotes</item>
        <item>Minste upvotes</item>
        <item>Recent</item>
        <item>ABC</item>
        <item>XYZ</item>
        <item>Alleen categorie</item>

    </string-array>

    <string name="camera_stillshot_confirm">GEBRUIK FOTO</string>
    <string name="camera_video_confirm">GEBRUIK VIDEO</string>
    <string name="camera_retry">OPNIEUW</string>

    <string-array name="radius_preference_array">
        <item>Very small</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Very large</item>
        <item>Extreme</item>

    </string-array>

    <string-array name="radius_preference_array_values">
        <item>0.002</item>
        <item>0.005</item>
        <item>0.015</item>
        <item>0.03</item>
        <item>0.05</item>
        <item>2</item>

    </string-array>



</resources>
