<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newReport_summaryFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.svenwesterlaken.gemeentebreda.presentation.fragments.NewReportSummaryFragment"
    tools:ignore="missingPrefix">

    <com.svenwesterlaken.gemeentebreda.presentation.partials.CompatScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp">

            <TextView
                android:id="@+id/summary_TV_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/new_report_title_summary"
                android:textAppearance="@style/TextAppearanceSettingsCategory"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/summary_CV_concept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_TV_title">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/summary_CL_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/summary_IV_icon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="@+id/summary_TV_address"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/summary_TV_reportTitle"
                            app:srcCompat="@drawable/image_broken_variant" />

                        <TextView
                            android:id="@+id/summary_TV_reportTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/summary_missing_category"
                            android:textAppearance="@style/CustomtextAppearanceSmall"
                            android:textColor="@color/md_edittext_error"
                            app:layout_constraintLeft_toRightOf="@+id/summary_IV_icon"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/summary_TV_address"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/summary_missing_location"
                            android:textAppearance="@style/CustomtextAppearanceSmall"
                            android:textColor="@color/md_edittext_error"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintLeft_toLeftOf="@+id/summary_TV_reportTitle"
                            app:layout_constraintRight_toRightOf="@+id/summary_TV_reportTitle"
                            app:layout_constraintTop_toBottomOf="@+id/summary_TV_reportTitle"
                            app:layout_constraintVertical_bias="0.0" />

                    </android.support.constraint.ConstraintLayout>

                    <View
                        android:id="@+id/summary_D_header"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/summary_CL_header"
                        android:background="?attr/colorDivider" />

                    <TextView
                        android:id="@+id/summary_TV_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/summary_D_header"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/summary_missing_description"
                        android:textAppearance="@style/CustomtextAppearanceSmall"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/summary_D_header" />

                    <ImageView
                        android:id="@+id/summary_IV_image"
                        android:layout_width="match_parent"
                        android:layout_height="144dp"
                        android:layout_below="@+id/summary_TV_description"
                        android:layout_marginEnd="24dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorImageBackground"
                        android:scaleType="centerCrop"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/summary_TV_description" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/summary_TV_edit"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/summary_edit"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_CV_concept" />

            <TextView
                android:id="@+id/summary_TV_authorTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/summary_author_title"
                android:textAppearance="@style/TextAppearanceSettingsCategory"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_TV_edit" />

            <android.support.v7.widget.CardView
                android:id="@+id/summary_CV_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_TV_authorTitle">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/summary_TV_authorName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/CustomtextAppearanceMedium"
                        android:textColor="?android:attr/textColorPrimary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/summary_TV_authorEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textAppearance="@style/CustomtextAppearanceSmall"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/summary_TV_authorName" />

                    <TextView
                        android:id="@+id/summary_TV_authorPhone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textAppearance="@style/CustomtextAppearanceSmall"
                        android:textColor="?android:attr/textColorSecondary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/summary_TV_authorEmail" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/summary_TV_authorInfo"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/summary_author_info"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_CV_author" />

            <View
                android:id="@+id/summary_D_button"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="?attr/colorDivider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_TV_authorInfo" />

            <Button
                android:id="@+id/summary_BTN_send"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:elevation="2dp"
                android:text="@string/summary_btn_submit"
                android:textColor="@color/colorPrimaryText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summary_D_button"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

    </com.svenwesterlaken.gemeentebreda.presentation.partials.CompatScrollView>

</FrameLayout>